--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -5,3 +5,7 @@
 .btn_explorer{
     @include btn_explorer
 }
+
+.btn_fonction{
+    @include btn_fonction
+}
