--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 footer{
+     background-color: $colour-footer;
     p{
         color: $colour-white;
     }
